--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,13 @@
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
+    <string name="search">Tìm kiếm...</string>
+    <string name="student_table_title_infomation">Thông Tin Học Sinh</string>
+    <string name="student_table_title_action">Thao tác</string>
+    <string name="student_table_button_add">Thêm học sinh</string>
+    <string name="student_table_button_export">Xuất danh sách lớp</string>
+    <!-- Phong's Temporary Content -->
+    <string name="teacherName">Nguyễn Thị Thủy</string>
+    <string name="teacherClassroom">GVCN Lớp 12A1</string>
+    <string name="teacherTitleList">Danh sách lớp 12A1</string>
 </resources>
