chuyển topbar từ layout sang fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,6 @@
     <string name="menuAccount">Tài khoản</string>
     <string name="signout">Đăng xuất</string>
     <string name="classroomExportTitle">Danh Sách Sinh Viên</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
