--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,6 @@
     <string name="menuAccount">Tài khoản</string>
     <string name="signout">Đăng xuất</string>
     <string name="classroomExportTitle">Danh Sách Sinh Viên</string>
+    <string name="classroomExportButtonPhoto">Xuất dạng hình ảnh</string>
+    <string name="classroomExportButtonPDF">Xuất dạng PDF</string>
 </resources>
