--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="title_activity_login">LoginActivity</string>
     <string name="username">Tên đăng nhập</string>
     <string name="password">Mật khẩu</string>
-    <string name="action_register">Đăng ký</string>
+    <string name="action_register">Đăng ký Demo</string>
     <string name="action_sign_in">Đăng nhập</string>
     <string name="action_register_long">Bạn chưa có tài khoản?</string>
     <string name="welcome">Welcome !</string>
@@ -50,6 +50,6 @@
     <string name="classroomExportTitle">Danh Sách Sinh Viên</string>
     <string name="classroomExportButtonPhoto">Xuất dạng hình ảnh</string>
     <string name="classroomExportButtonPDF">Xuất dạng PDF</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+
 </resources>
