15-04-2022 thêm chế độ dark mode & đăng xuất tài khoản

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -89,6 +89,7 @@
 
     <string name="SaveSubject">Lưu môn học</string>
     <string name="ChangeAvatar">Đổi hình đại diện</string>
+    <string name="changePassword">Thay đổi mật khẩu</string>
 
 
     <!--    End Edit Subject-->
