--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -115,4 +115,31 @@
     <string name="tv_subject_lable">Môn học</string>
 
 
+
+    <!-- Chung -->
+    <string name="TitleEvent">Danh sách sự kiện</string>
+    <string name="nameEvent">Họp phụ huynh tổng kết học kỳ</string>
+    <string name="place">Địa điểm: Phòng học C2</string>
+    <string name="eventDateTime">07:00 a.m-11:00 a.m 22/03/2022</string>
+    <string name="EventTitleInformation">Thông tin sự kiện</string>
+    <string name="AddEvent">Thêm sự kiện</string>
+    <string name="ExportEvent">Xuất danh sách sự kiện</string>
+
+    <string name="PageAddEvent">Thêm sự kiện</string>
+    <string name="EventName">Tên sự kiện</string>
+    <string name="StartTime">Bắt đầu</string>
+    <string name="EndTime">Kết thúc</string>
+    <string name="Date">Ngày diễn ra</string>
+    <string name="Place">Địa điểm</string>
+    <string name="EVName">Event name</string>
+    <string name="EVstart">Start</string>
+    <string name="EVend">End</string>
+    <string name="EVdate">Date</string>
+    <string name="EVplace">Place</string>
+
+    <string name="PageUpdateEvent">Sửa thông tin sự kiện</string>
+
+    <!-- end Chung -->
+
+
 </resources>
