18-04-2022 tinh chỉnh lại giao diện

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,7 +42,7 @@
     <string name="avatar">Ảnh Đại Diện</string>
     <string name="grade">Tên Lớp</string>
     <string name="gradeName">D18CQCN03</string>
-    <string name="ourBirthday">01–05–2000</string>
+    <string name="ourBirthday">01/05/2000</string>
     <string name="OK">Đồng ý</string>
     <string name="Save">Lưu</string>
     <string name="Cancel">Hủy bỏ</string>
